duicontrolpanel (0.8.19~unreleased) unstable; urgency=low

  * Fixes: applet debugs/warnings were not coming from brief supplier
    process, even with -output-level
  * Fixes: NB#199886 - Startup time of dcp increased a bit

 -- Robert Manner <robert.manner@blumsoft.eu>  Mon, 25 Oct 2010 16:47:28 +0200

duicontrolpanel (0.8.18) unstable; urgency=low

  [ Tamas Balogh ]
  * Documentation improvements

  [ Robert Manner ]
  * Changes: handles the applet briefs in separate process so that
    controlpanel does not stop responding while appelts are loading
  * Fixes: NB#197904 - Plug-ins view background is shown in black color
    for some time

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 20 Oct 2010 17:29:19 +0200

duicontrolpanel (0.8.17.1) unstable; urgency=low

  * Little fix for helpid

 -- Robert Manner <robert.manner@blumsoft.eu>  Fri, 15 Oct 2010 12:59:50 +0200

duicontrolpanel (0.8.17) unstable; urgency=low

  [ Robert Manner ]
  * Changes: help content can be specified for the icon of a plugin
    through .desktop file or DcpBrief
  * Adds credential for dsme usage
  * Fixes: applet does not get the new toggle state in case of button
    type applet

 -- Viktor Nagy <viktor.nagy@blumsoft.eu>  Thu, 14 Oct 2010 15:30:11 +0200

duicontrolpanel (0.8.16) unstable; urgency=low

  * Little compile fix for meego 1.1
  * Fixes: NB#195911 - controlpanel crashing if its called via servicefw
    with invalid parameter
  * Adds support for popping up categorypage through servicefw
  * Fixes: Popping up a button type applet through servicefw, moves to
    the categorypage (the applet has no view)
  * Changes: Additional requirements of the .desktop format for
    libcontentaction support

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 05 Oct 2010 14:32:40 +0200

duicontrolpanel (0.8.15.1) unstable; urgency=low

  * Little compile fix for new Qt

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 29 Sep 2010 11:44:42 +0200
